[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Entities/DefaultSlime/DefaultSlime.gd" type="Script" id=2]
[ext_resource path="res://Entities/DefaultSlime/HealthBar.gd" type="Script" id=3]
[ext_resource path="res://Entities/DefaultSlime/death.wav" type="AudioStream" id=4]
[ext_resource path="res://Objects/Particles/ExplosionEffect.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 26.3942

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.611765, 0.00784314, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.705882, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[node name="DefaultSlime" type="Node2D"]
script = ExtResource( 2 )
MAX_HEALTH = 20

[node name="Collider" type="Area2D" parent="." groups=[
"Enemies",
]]

[node name="Shape" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 50, 5 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 20.0
value = 20.0
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Explosion" parent="." instance=ExtResource( 5 )]
[connection signal="health_changed" from="." to="HealthBar" method="_on_DefaultSlime_health_changed"]
[connection signal="area_entered" from="Collider" to="." method="_on_Collider_area_entered"]
